# tale

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
app/: CMakeLists.txt  main.cpp
app/shaders/: cube.glsl  floor.glsl  sphere.glsl
engine/: CMakeLists.txt  app.cpp
engine/cmake/: Findphysx.cmake
engine/core/: scene.cpp  window.cpp
engine/engine/: engine.cpp  monitor_render_system.cpp  physics_system.cpp  shader_system.cpp  system.cpp  vr_system.cpp
engine/shaders/: ambient_occlusion.rahit  common_types.glsl  lighting.glsl  primary.rchit  primary.rint  primary.rmiss  raygen_monitor.rgen  raygen_vr.rgen  raymarch.glsl  shadow.rahit
engine/vr/: instance.cpp  session.cpp  vr.cpp  vr_common.hpp  vr_swapchain.cpp
engine/vulkan/: acceleration_structure.cpp  command_buffer.cpp  context.cpp  monitor_swapchain.cpp  raytracing_pipeline.cpp  renderer.cpp  texture.cpp  vma_buffer.cpp  vma_image.cpp  vma_implementation.cpp  vma_includes.hpp  vulkan.cpp
